# transition-amr-parser

./: .dockerignore  .gitignore  .mailmap  .mailmap~  1  LICENSE  README.md  amr.py  bd_testall-rank-avgtop-dec_exps.sh.submit_log  bd_testall-rank-avgtop-dec_exps.sh.submit_log0  bd_testall-rank-avgtop-dec_exps.sh.submit_log1  bd_testall-rank-avgtop-dec_exps.sh.submit_log2  bd_testall-rank-avgtop-dec_exps.sh.submit_log3  bd_testall-rank-avgtop-dec_exps.sh.submit_log4  bd_testall-rank-avgtop-dec_exps.sh.submit_log6  bd_testall-rank-avgtop-dec_exps.sh.submit_log7  bd_testall-rank-avgtop-dec_exps.sh.submit_log_o3  bd_testall-rank-avgtop-dec_exps.sh.submit_log_o3-0  bd_testall-rank-avgtop-dec_exps.sh.submit_log_o3-1  data_oracle.py  debug.sh  debug_data_iterator.py  debug_data_iterator.sh  final_results.sh  learn.py  parse.py  pyproject.toml  requirements.txt  set_environment.sh  set_exps.sh  setup.py  state_machine.py  utils.py  vis.py
DATA/: wiki25.jkaln
align_cfg/: README.md  align_leamr.py  align_utils.py  alignment_decoder.py  amr_utils.py  compare_oracles.py  constraints.txt  create_experiments.py  create_experiments.py.20210617  dgl_demo.py  dummy_align.py  evaluation.py  formatter.py  gcn.py  install.sh  launch_many_jobs.py  main.py  metric_utils.py  pretrained_embeddings.py  pretrained_embeddings.sh  reporter.py  resolve_manual_alignments.py  run_detailed_eval.py  run_eval.py  run_model_selection.py  run_sampler.py  shared_tokens.py  standalone_elmo.py  standalone_elmo_test.py  summarize-mpl.py  summarize.py  tokenize_amr.py  transformer_lm.py  tree_lstm.py  tree_rnn.py  view_manual_alignments.py  vocab.py  vocab_definitions.py
config_files/: config_model_debug.sh  wiki25.sh
config_files_old/: config_model_debug.sh
configs/: amr1.0-action-pointer.sh  amr1.0-structured-bart-base.sh  amr1_o5+Word100_roberta.large.top24_stnp6x6.sh  amr1_o5_roberta.base_stnp6x6.sh  amr2.0-action-pointer-bert.sh  amr2.0-action-pointer.sh  amr2.0-de-mbart.sh  amr2.0-deens-mbart.sh  amr2.0-deensgen-mbart.sh  amr2.0-degen-mbart.sh  amr2.0-es-mbart.sh  amr2.0-esens-mbart.sh  amr2.0-esensgen-mbart.sh  amr2.0-esgen-mbart.sh  amr2.0-it-mbart.sh  amr2.0-itens-mbart.sh  amr2.0-itensgen-mbart.sh  amr2.0-itgen-mbart.sh  amr2.0-mbart-large.sh  amr2.0-structured-bart-base.sh  amr2.0-structured-bart-large-counts-al-sampling.sh  amr2.0-structured-bart-large-counts-al.sh  amr2.0-structured-bart-large-joint-voc-neur-al.sh  amr2.0-structured-bart-large-joint-voc.sh  amr2.0-structured-bart-large-neur-al-gcn-sampling5-scaled.sh  amr2.0-structured-bart-large-neur-al-importance-sampling5.sh  amr2.0-structured-bart-large-neur-al-ramon.sh  amr2.0-structured-bart-large-neur-al-sampling-mod4.sh  amr2.0-structured-bart-large-neur-al-sampling.sh  amr2.0-structured-bart-large-neur-al-sampling5.sh  (+74 more)
(+1247 files in other folders)
