[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transition_neural_parser"
version = '0.5.2.1'
authors = [
  { name="GX", email="GX.Xu@ibm.com" },
]
description = "The package for transition based nueral AMR parser"
readme = "README.md"
requires-python = "~=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
]

[tool.poetry.platforms]
os = "linux"

[project.urls]
"Homepage" = "https://github.ibm.com/mnlp/transition-amr-parser/tree/transition-neural-parser"
"Bug Tracker" = "https://github.ibm.com/mnlp/transition-amr-parser/issues"